feat: Pagination and Sorting in GET Request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,16 @@ spring.datasource.password=v!jdEcTKGr4D!vZRu9
 spring.datasource.driver-class-name=org.postgresql.Driver
 
     # Dialeto específico do PostgreSQL para o Hibernate
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
+#hibernate.dialect=org.hibernate.dialect.HSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
     # Mostrar as consultas SQL
 spring.jpa.show-sql=true
 
     # Formatar o SQL para leitura
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.hibernate.ddl-auto=update
 
 spring.flyway.enabled=false
