feat: Author name validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,13 @@ spring.application.name=book-manager-api
 
 #Configurações do PostgresSQL (Datasource)
 spring.datasource.url=jdbc:postgresql://localhost/book_manager
-spring.datasource.username=postgres
-spring.datasource.password=v!jdEcTKGr4D!vZRu9
+
+spring.datasource.username=${DB_NAME}
+
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
     # Dialeto específico do PostgreSQL para o Hibernate
-#hibernate.dialect=org.hibernate.dialect.HSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
