--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=book-manager-api
 
-#Configurações do PostgresSQL (Datasource)
+    #Configurações do PostgresSQL (Datasource)
 spring.datasource.url=jdbc:postgresql://localhost/book_manager
 
 spring.datasource.username=${DB_NAME}
@@ -20,4 +20,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.flyway.enabled=false
+#spring.flyway.enabled=false
